--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@umijs/openapi": "1.1.12",
     "@umijs/plugin-openapi": "^1.2.0",
     "@umijs/route-utils": "^1.0.33",
+    "ahooks": "^2.9.6",
     "antd": "^4.12.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
