--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ant-design-pro",
-  "version": "5.0.0-beta.2",
+  "name": "ydj-h5-boss",
+  "version": "0.0.1-dev",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
@@ -46,16 +46,16 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.0.0",
-    "@ant-design/pro-descriptions": "^1.2.0",
-    "@ant-design/pro-form": "^1.3.0",
-    "@ant-design/pro-layout": "^6.9.0",
-    "@ant-design/pro-table": "^2.17.0",
+    "@ant-design/icons": "^4.6.2",
+    "@ant-design/pro-descriptions": "^1.8.2",
+    "@ant-design/pro-form": "^1.29.0",
+    "@ant-design/pro-layout": "^6.19.5",
+    "@ant-design/pro-table": "^2.41.0",
     "@umijs/openapi": "1.1.12",
     "@umijs/plugin-openapi": "^1.2.0",
-    "@umijs/route-utils": "^1.0.33",
-    "ahooks": "^2.9.6",
-    "antd": "^4.12.0",
+    "@umijs/route-utils": "^1.0.37",
+    "ahooks": "^2.10.6",
+    "antd": "^4.16.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
@@ -65,7 +65,7 @@
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.0.4",
     "umi": "^3.4.0",
-    "umi-request": "^1.0.8"
+    "umi-request": "^1.3.9"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.0.2",
